# hackAtBrown2026

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .env.example  API_DOCUMENTATION.md  analyze_with_gemini.py  app.py  conftest.py  inference_engine.py  memory.py  model_verification.md  pytest.ini  requirements.txt  test_gemini_api_key.py  test_vertex_ai.py  test_with_extension_data.py  validate_model.py
backend/.hypothesis/constants/: 1d5a9cdc03c32b80  1ec563faf9740051  (+2 more)
backend/memory_store/: Behavior.md  Budget.md  Goals.md  State.md  chroma.sqlite3
backend/persage/: CMakeLists.txt  SETUP.md  SETUP_MAC.md  STATUS.md  broker.py  build.sh  frame_bridge.py  headless_vitals.cpp  index.html  mac_broker.py  mac_cam.py  requirements.txt  test_broker.py  windows_cam.py
backend/tests/: __init__.py  example_usage.py  run_pipeline_demo.py  test_api.py  test_app_extended.py  test_app_fuzz.py  test_e2e.py  test_e2e_extended.py  test_inference_engine.py  test_inference_engine_fuzz.py  test_memory.py  test_memory_extended.py  test_vertex_ai.py  test_with_extension_data.py
backend/validations/: validate_model.py  validate_prompt.py  validate_weights.py
extension/: README.md  api_test.js  background.js  camera.html  camera.js  content.js  content.ts  gambling_sites.json  jest.config.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  popup.ts  styles.css  tracker.js  tsconfig.json
extension/tests/: background.test.js  content-dom.test.js  content.test.js  fuzz.test.js  popup.test.js  setup.js  tracker.test.js
